tests/nested_type_disallowed_fn_bad.stderr
tests/nested_type_disallowed_fn_bad.hop:3:5: error: HOP1004: unexpected token
