tests/nested_type_disallowed_fn_bad.hop
// Verifies nested type disallowed function is rejected.
struct Thing {
    fn bad() {}
}
